--- a/source/one.Identity/one.Identity.csproj
+++ b/source/one.Identity/one.Identity.csproj
@@ -29,5 +29,9 @@
     <PackageReference Include="Serilog.Sinks.File" Version="3.2.0" />
     <PackageReference Include="Serilog.Sinks.Literate" Version="3.0.0" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <DotNetCliToolReference Include="BundlerMinifier.Core" Version="2.4.337" />
+  </ItemGroup>
 
 </Project>
