--- a/source/one.Identity/bower.json
+++ b/source/one.Identity/bower.json
@@ -9,5 +9,8 @@
     "simple-line-icons": "latest",
     "pace": "latest",
     "chart.js": "^2.3.0"
+  },
+  "resolutions": {
+    "popper.js": "^1.11.0"
   }
 }
