--- a/source/one.Identity/one.Identity.csproj
+++ b/source/one.Identity/one.Identity.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="PublishOutput\**" />
+    <Content Remove="PublishOutput\**" />
+    <EmbeddedResource Remove="PublishOutput\**" />
+    <None Remove="PublishOutput\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Styles\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
