--- a/source/one.Identity/one.Identity.csproj
+++ b/source/one.Identity/one.Identity.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <Folder Include="Styles\" />
+    <Folder Include="Views\Client\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
