--- a/source/one.Identity/one.Identity.csproj
+++ b/source/one.Identity/one.Identity.csproj
@@ -43,6 +43,7 @@
   
   <ItemGroup>
     <DotNetCliToolReference Include="BundlerMinifier.Core" Version="2.4.337" />
+    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
