udpated docker file

--- a/source/Dockerfile
+++ b/source/Dockerfile
@@ -14,7 +14,7 @@ WORKDIR "/src/one.Identity"
 RUN dotnet build "one.Identity/one.Identity.csproj" -c Release -o /app
 
 FROM build AS publish
-RUN dotnet publish "one.Identity/one.Identity.csproj" -c Release -o /app
+RUN dotnet publish "one.Identity.csproj" -c Release -o /app
 
 FROM base AS final
 WORKDIR /app
