--- a/source/one.Identity/one.Identity.csproj
+++ b/source/one.Identity/one.Identity.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <Folder Include="Styles\" />
     <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\css\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="8.0.0" />
