--- a/source/spydersoft.Identity/package.json
+++ b/source/spydersoft.Identity/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.10",
   "description": "Identity Server 4 Implementation",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "bootstrap": "4.0.0",
     "chart.js": "2.7.1",
     "flag-icon-css": "3.0.0",
