--- a/source/spydersoft.Identity/spydersoft.Identity.csproj
+++ b/source/spydersoft.Identity/spydersoft.Identity.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Models\UserAdmin\" />
     <Folder Include="Styles\" />
     <Folder Include="wwwroot\" />
     <Folder Include="wwwroot\css\" />
