Changed build and deploy images

--- a/source/Dockerfile
+++ b/source/Dockerfile
@@ -1,11 +1,11 @@
 #Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
 #For more information, please see https://aka.ms/containercompat
 
-FROM microsoft/aspnetcore:2.0-nanoserver-sac2016 AS base
+FROM mcr.microsoft.com/dotnet/core/aspnet:2.2.3-nanoserver-1709 AS base
 WORKDIR /app
 EXPOSE 80
 
-FROM microsoft/aspnetcore-build:2.0-nanoserver-sac2016 AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:2.2.105-nanoserver-1809 AS build
 WORKDIR /src
 COPY ["spydersoft.Identity/spydersoft.Identity.csproj", "spydersoft.Identity/"]
 
