--- a/source/Dockerfile
+++ b/source/Dockerfile
@@ -13,6 +13,15 @@ RUN dotnet restore "spydersoft.Identity/spydersoft.Identity.csproj"
 COPY . .
 WORKDIR "/src/spydersoft.Identity"
 
+## Could try a multi-arch build here too:  https://github.com/aspnet/aspnet-docker/tree/master/2.1
+ENV NODE_VERSION 8.9.4
+ENV NODE_DOWNLOAD_SHA 21fb4690e349f82d708ae766def01d7fec1b085ce1f5ab30d9bda8ee126ca8fc
+RUN curl -SL "https://nodejs.org/dist/v${NODE_VERSION}/node-v${NODE_VERSION}-linux-x64.tar.gz" --output nodejs.tar.gz \
+    && echo "$NODE_DOWNLOAD_SHA nodejs.tar.gz" | sha256sum -c - \
+    && tar -xzf "nodejs.tar.gz" -C /usr/local --strip-components=1 \
+    && rm nodejs.tar.gz \
+    && ln -s /usr/local/bin/node /usr/local/bin/nodejs
+
 RUN npm install
 RUN npm install gulp
 RUN gulp build:dist
