Fixed Linting warning in Dockerfile

--- a/source/Dockerfile
+++ b/source/Dockerfile
@@ -12,9 +12,7 @@ COPY . .
 WORKDIR /src/spydersoft.Identity
 RUN npm install
 RUN npm install gulp-cli -g
-#RUN npm install gulp
 RUN gulp build:dist
-
 
 FROM mcr.microsoft.com/dotnet/core/sdk:2.2-nanoserver-1809 AS build
 WORKDIR /src
@@ -22,7 +20,7 @@ COPY ["spydersoft.Identity/spydersoft.Identity.csproj", "spydersoft.Identity/"]
 
 RUN dotnet restore "spydersoft.Identity/spydersoft.Identity.csproj"
 COPY . .
-WORKDIR "/src/spydersoft.Identity"
+WORKDIR /src/spydersoft.Identity
 
 RUN dotnet build "spydersoft.Identity.csproj" -c Release -o /app
 
