--- a/source/spydersoft.Identity/appsettings.json
+++ b/source/spydersoft.Identity/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "IdentityConnection": "Server=envy-mg;Database=Identity;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "IdentityConnection": "Server=sql01;Database=DevIdentity;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
