--- a/source/spydersoft.Identity/package.json
+++ b/source/spydersoft.Identity/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.10",
   "description": "Identity Server 4 Implementation",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.7.2",
+    "@fortawesome/fontawesome-free": "^5.12.0",
     "bootstrap": "4.3.1",
     "chart.js": "2.7.3",
     "flag-icon-css": "3.3.0",
     "font-awesome": "4.7.0",
-    "jquery": "3.3.1",
-    "jquery-validation": "^1.17.0",
+    "jquery": "^3.4.1",
+    "jquery-validation": "^1.19.1",
     "jquery-validation-unobtrusive": "^3.2.6",
     "pace-progress": "1.0.2",
     "popper.js": "1.14.7",
