Update to .net core 3.1 and fixed issue with EF/Automapper

--- a/source/spydersoft.Identity/spydersoft.Identity.csproj
+++ b/source/spydersoft.Identity/spydersoft.Identity.csproj
@@ -13,6 +13,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\Migrations\AspNetIdentity\20191211025217_aspnetcore_31_update.cs" />
+    <Compile Remove="Data\Migrations\AspNetIdentity\20191211025217_aspnetcore_31_update.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Models\UserAdmin\" />
     <Folder Include="Styles\" />
     <Folder Include="wwwroot\" />
@@ -22,8 +27,8 @@
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="GravatarHelper.AspNetCore" Version="1.1.0" />
-    <PackageReference Include="IdentityServer4.AspNetIdentity" Version="3.0.2" />
-    <PackageReference Include="IdentityServer4.EntityFramework" Version="3.0.2" />
+    <PackageReference Include="IdentityServer4.AspNetIdentity" Version="3.1.0" />
+    <PackageReference Include="IdentityServer4.EntityFramework" Version="3.1.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.12.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="3.1.0" />
