Updated Docker File for Linux

--- a/source/Dockerfile.windows
+++ b/source/Dockerfile.windows
@@ -1,24 +1,20 @@
 #Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
 #For more information, please see https://aka.ms/containercompat
 
-FROM mcr.microsoft.com/dotnet/aspnet:5.0-focal AS base
+FROM mcr.microsoft.com/dotnet/aspnet:5.0-nanoserver-1809 AS base
 WORKDIR /app
 EXPOSE 80
 
-# Setup NodeJs
-
-RUN apt-get install curl gnupg -yq
-RUN curl -sL https://deb.nodesource.com/setup_12.x | bash
-RUN apt-get install nodejs -yq
-
-# End setup
+FROM stefanscherer/node-windows:12.18.3-nanoserver-1809 AS node-builder
+WORKDIR /src
+COPY . .
 
 WORKDIR /src/spydersoft.Identity
 RUN npm install
 RUN npm install gulp-cli -g
 RUN gulp build:dist
 
-FROM mcr.microsoft.com/dotnet/sdk:5.0-focal AS build
+FROM mcr.microsoft.com/dotnet/sdk:5.0-nanoserver-1809 AS build
 WORKDIR /src
 COPY ["spydersoft.Identity/spydersoft.Identity.csproj", "spydersoft.Identity/"]
 
