Testing gulp install

--- a/source/Dockerfile
+++ b/source/Dockerfile
@@ -16,8 +16,8 @@ RUN apt-get install nodejs -yq
 
 WORKDIR /src/spydersoft.Identity
 RUN npm install
-RUN npm install gulp-cli -g
-RUN gulp build:dist
+RUN npm install gulp -g
+RUN npx gulp build:dist
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0-focal AS build
 WORKDIR /src
