Updated docker and gulp tasks for linux (case-sensitive)

--- a/source/Dockerfile
+++ b/source/Dockerfile
@@ -10,9 +10,9 @@ WORKDIR /src
 COPY . .
 
 WORKDIR /src/spydersoft.Identity
-RUN npm install
-RUN npm install gulp-cli -g
+RUN npm install && npm install gulp-cli -g
 RUN gulp build:dist
+
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0-focal AS build
 WORKDIR /src
