--- a/source/spydersoft.Identity/package.json
+++ b/source/spydersoft.Identity/package.json
@@ -4,24 +4,24 @@
   "private": true,
   "description": "Identity Server 4 Implementation",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.12.0",
-    "bootstrap": "4.3.1",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "bootstrap": "^4.5.3",
     "chart.js": "2.7.3",
     "flag-icon-css": "3.3.0",
     "font-awesome": "4.7.0",
     "jquery": "^3.5.1",
-    "jquery-validation": "^1.19.1",
+    "jquery-validation": "^1.19.2",
     "jquery-validation-unobtrusive": "^3.2.6",
     "pace-progress": "1.0.2",
-    "popper.js": "1.14.7",
-    "simple-line-icons": "2.4.1"
+    "popper.js": "^1.16.1",
+    "simple-line-icons": "^2.5.5"
   },
   "devDependencies": {
-    "gulp": "4.0.0",
-    "gulp-autoprefixer": "6.0.0",
-    "gulp-cssmin": "0.2.0",
-    "gulp-rename": "1.4.0",
-    "gulp-sass": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.1.0"
   },
   "scripts": {},
   "browserslist": [
