--- a/charts/identity-server/values.yaml
+++ b/charts/identity-server/values.yaml
@@ -25,7 +25,7 @@ ingress:
   enabled: true
   annotations: 
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/rewrite-target: /
   labels: 
     ingressClassName: "nginx"
   hosts:
