--- a/templates/dotnet-build-steps.yml
+++ b/templates/dotnet-build-steps.yml
@@ -7,7 +7,7 @@ steps:
   - task: Npm@1
     displayName: NPM Install
     inputs:
-      workingDir: $(Build.SourcesDirectory)/source/spydersoft.identity
+      workingDir: $(Build.SourcesDirectory)/source/spydersoft.Identity
       command: install
 
   - task: DotNetCoreCLI@2
