removed extra restore steps

--- a/templates/dotnet-build-steps.yml
+++ b/templates/dotnet-build-steps.yml
@@ -33,8 +33,8 @@ steps:
     displayName: 'DotNet restore packages (dotnet restore)'
     inputs:
       command: 'restore'
-      feedsToUse: config
-      nugetConfigPath: "$(Build.SourcesDirectory)/nuget.config"
+      #feedsToUse: config
+      #nugetConfigPath: "$(Build.SourcesDirectory)/nuget.config"
       projects: "**/*.csproj"
       #externalFeedCredentials: 'SpydersoftDevelop'
 
