--- a/templates/dotnet-build-steps.yml
+++ b/templates/dotnet-build-steps.yml
@@ -7,6 +7,13 @@ parameters:
   default: '5.0.x'
 
 steps:
+  - task: gitversion/setup@0
+    displayName: Setup GitVersion on Agent
+    inputs:
+      versionSpec: '5.x'
+  - task: gitversion/execute@0
+    displayName: Execute GitVersion to update build number
+
   - task: UseDotNet@2
     displayName: 'Use .NET Core sdk'
     inputs:
@@ -43,5 +50,5 @@ steps:
     inputs:
       command: publish
       projects: 'source/spydersoft.Identity/spydersoft.Identity.csproj'
-      arguments: '--no-restore --configuration ${{ parameters.BUILD_CONFIGURATION }} --output $(Build.ArtifactStagingDirectory)'
+      arguments: '--no-restore --configuration ${{ parameters.BUILD_CONFIGURATION }} --output $(Build.ArtifactStagingDirectory) /p:InformationalVersion=$(fullSemVer)'
       zipAfterPublish: True
