--- a/templates/docker-image-steps.yml
+++ b/templates/docker-image-steps.yml
@@ -26,24 +26,6 @@ steps:
       script: |
         cp $(Build.SourcesDirectory)/Dockerfile.simple $(Pipeline.Workspace)/publishFiles/Dockerfile
 
-  - task: Bash@3
-    name: setContainerTag
-    displayName: Set branch tag
-    inputs:
-      targetType: 'inline'
-      script: |
-          echo 'Source Branch Name $(build.SourceBranch)'
-          if [ '$(build.SourceBranch)' == 'refs/heads/master' ]
-          then
-              echo 'Setting branchTag to rc'
-              echo '##vso[task.setvariable variable=containerTag;isOutput=true]$(build.buildnumber)'
-              echo '##vso[task.setvariable variable=containerTag]$(build.buildnumber)'
-          else
-              echo 'Setting branchTag to feature'
-              echo '##vso[task.setvariable variable=containerTag;isOutput=true]feature-$(build.buildnumber)'
-              echo '##vso[task.setvariable variable=containerTag]feature-$(build.buildnumber)'
-          fi
-
   - task: Docker@2
     displayName: Build Image
     inputs:
@@ -54,7 +36,7 @@ steps:
       buildContext: '$(Pipeline.Workspace)/publishFiles'
       # always add the regression-test tag here so that the docker compose can find this image for testing
       tags: |
-        $(containerTag) 
+        $(build.buildnumber)
 
   - task: Docker@2
     displayName: Push to Container Registry
@@ -63,4 +45,4 @@ steps:
       repository: '${{ parameters.dockerImageName}}'
       command: 'push'
       tags: | 
-        $(containerTag)
+        $(build.buildnumber)
