--- a/pipeline-release.yml
+++ b/pipeline-release.yml
@@ -1,7 +1,4 @@
-## Basic Build Pipeline
-## Feature builds only do the build and UT portion 
-## Builds from master will create container images and helm charts and create an octopus release
-## based on that build
+## Release Build Pipeline - Build master and push to release-candidate channel
 
 variables:
   - group: helm-repository
@@ -35,7 +32,7 @@ variables:
 trigger:
   branches:
     include:
-      - feature/*
+      - master
   paths:
     exclude:
       - README.md
@@ -93,14 +90,14 @@ stages:
          curl $(helm_repository_url) --user $(helm_username):$(helm_password) --upload-file $(helmChartName)-$(build.buildnumber).tgz
         workingDirectory: $(helmChartPath)
 
-- stage: test_release
+- stage: stage_release
   dependsOn:
   - helm_publish
-  displayName: Create and Deploy Octopus Release to Test Channel
+  displayName: Create and Deploy Octopus Release to Release Candidate Channel
   jobs:
-  - deployment: test
-    displayName: 'Deploy to Test'
-    environment: test
+  - deployment: stage
+    displayName: 'Deploy to Stage'
+    environment: stage
     pool:
       name: Default
       demands: agent.os -equals Linux
@@ -115,6 +112,31 @@ stages:
               ProjectGroup: 'Identity Server' #'ProjectGroups-41'
               ProjectName: 'identity.server.k8' #'Projects-241'
               ReleaseNumber: '$(build.buildnumber)'
-              Channel: 'development' #'Channels-281'
-              DeployToEnvironment: 'mattgerega.net (Test)' #'Environments-1'
-              AdditionalArguments: '--packageversion $(build.buildnumber)'
+              Channel: 'release-candidate' #'Channels-281'
+              DeployToEnvironment: 'mattgerega.org (Stage)' #'Environments-1'
+              AdditionalArguments: '--packageversion %build.number%'
+   
+- stage: production_release
+  dependsOn:
+  - helm_publish
+  displayName: Promote to Production
+  jobs:
+  - deployment: production
+    displayName: 'Promote to Production'
+    environment: production
+    pool:
+      name: Default
+      demands: agent.os -equals Linux
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - task: OctopusPromote@4
+            inputs:
+              OctoConnectedServiceName: 'octopus-mattgerega-com'
+              Space: 'Gerega' #'Spaces-1'
+              ProjectGroup: 'Identity Server' #'ProjectGroups-41'
+              ProjectName: 'identity.server.k8' #'Projects-241'
+              From: 'mattgerega.org (Staging)' #'Environments-2'
+              To: mattgerega.com (Production)' #'Environments-3'
+
