--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,19 +1,19 @@
 assembly-versioning-scheme: MajorMinorPatchTag
-mode: Mainline
 continuous-delivery-fallback-tag: ''
-next-version: 1.1.0
+next-version: 1.1.1
 branches:
   master:
     regex: master
+    mode: ContinuousDeployment
     tag: ''
     increment: Patch
     prevent-increment-of-merged-branch-version: true
     track-merge-target: false
     tracks-release-branches: false
-    is-release-branch: true
-    is-mainline: true
+    is-release-branch: false
   feature:
     regex: features?[/-]
+    mode: ContinuousDelivery
     increment: None
     prevent-increment-of-merged-branch-version: true
     track-merge-target: false
