added proper quotes

--- a/pipeline-release.yml
+++ b/pipeline-release.yml
@@ -141,5 +141,5 @@ stages:
               ProjectName: 'identity.server.k8' #'Projects-241'
               Project: 'identity.server.k8'
               From: 'mattgerega.org (Staging)' #'Environments-2'
-              To: mattgerega.com (Production)' #'Environments-3'
+              To: 'mattgerega.com (Production)' #'Environments-3'
 
