--- a/pipeline-release.yml
+++ b/pipeline-release.yml
@@ -1,4 +1,10 @@
 ## Release Build Pipeline - Build master and push to release-candidate channel
+resources:
+  repositories:
+    - repository: templates
+      type: BitBucket
+      endpoint: "Bitbucket - spydersoft"
+      name: spydersoftteam/azure-devops-templates
 
 variables:
   - group: helm-repository
@@ -48,33 +54,26 @@ stages:
       name: Default
       demands: agent.os -equals Linux
     steps:
-    - template: templates/dotnet-build-steps.yml
+    - template: step_collections/dotnet-web-gulp-build-steps.yml@templates
       parameters:
         npmInstallFolder: $(npmInstallFolder)
         gulpFolder: $(gulpFolder)
         publishProject: $(publishProject)
-
     # this code takes all the files in $(Build.ArtifactStagingDirectory) and uploads them as an artifact of your pipeline.
     - publish: '$(Build.ArtifactStagingDirectory)' 
       artifact: '$(artifactName)'
 
-- stage: docker_and_test
+- stage: docker_publish
   displayName: Create Docker Image
   jobs:
-  - job: create_docker_image_and_test
-    timeoutInMinutes: 90
-    pool:
-      name: Default
-      demands: agent.os -equals Linux
-    steps:
-    - template: templates/docker-image-steps.yml
-      parameters:
-        dockerImageName: $(dockerImageName)
-        containerRegistryName: $(containerRegistryName)
-        containerRegistryUrl: $(containerRegistryUrl)
-        artifactName: '$(artifactName)'
-        artifactZipName: $(artifactZipName)
-        dockerImageFileName: $(dockerImageFileName)
+  - template: jobs/docker-image-job.yml@templates
+    parameters:
+      dockerImageName: $(dockerImageName)
+      containerRegistryName: $(containerRegistryName)
+      containerRegistryUrl: $(containerRegistryUrl)
+      artifactName: '$(artifactName)'
+      artifactZipName: $(artifactZipName)
+      dockerImageFileName: $(dockerImageFileName)
         
 
 - stage: helm_publish
