--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,7 +1,7 @@
 assembly-versioning-scheme: MajorMinorPatchTag
 continuous-delivery-fallback-tag: ''
 next-version: 1.1.1
-mode: ContinuousDeployment
+mode: Mainline
 branches:
   master:
     regex: master
