Added ElasticSearch sink to logging

--- a/source/spydersoft.Identity/appsettings.json
+++ b/source/spydersoft.Identity/appsettings.json
@@ -2,6 +2,18 @@
   "ConnectionStrings": {
     "IdentityConnection": "Server=sql01;Database=DevIdentity;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "Serilog": {
+    "MinimumLevel": "Warning",
+    "WriteTo:Elastic": {
+      "Name": "Elasticsearch",
+      "Args": {
+        "nodeUris": "http://elastic.mattgerega.com/"
+      }
+    },
+    "Properties": {
+      "Application": "identity.server"
+    }
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
